--- a/.github/workflows/c_build.yml
+++ b/.github/workflows/c_build.yml
@@ -7,8 +7,8 @@ on:
     branches: [ main ]
 
 jobs:
-  Build daemonLogger:
-
+  Build_daemonLogger:
+	name: Build daemon logger
     runs-on: ubuntu-latest
 
     steps:
@@ -22,16 +22,16 @@ jobs:
     #- name: make distcheck
     #  run: make distcheck
 
-#  Build concurrent_server:
+  Build_concurrent_server:
+	name: Build concurrent server back-end
+    runs-on: ubuntu-latest
 
-#    runs-on: ubuntu-latest
-
-#    steps:
-#    - uses: actions/checkout@v2
+    steps:
+    - uses: actions/checkout@v2
     #- name: configure
     #  run: ./configure
-#    - name: make concurrent_server
-#      run: make concurrent_server
+    - name: make concurrent_server
+      run: make concurrent_server
     #- name: make check
     #  run: make check
     #- name: make distcheck
