--- a/.github/workflows/c_build.yml
+++ b/.github/workflows/c_build.yml
@@ -7,7 +7,7 @@ on:
     branches: [ main ]
 
 jobs:
-  PapayaChat_Client:
+  Client (build):
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -20,7 +20,7 @@ jobs:
     #- name: make distcheck
     #  run: make distcheck
 
-  Concurrent_server:
+  Server (build):
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
