--- a/.github/workflows/c_build.yml
+++ b/.github/workflows/c_build.yml
@@ -7,7 +7,8 @@ on:
     branches: [ main ]
 
 jobs:
-  Client(build):
+  Client_Build:
+  - name: Client (build)
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -20,7 +21,7 @@ jobs:
     #- name: make distcheck
     #  run: make distcheck
 
-  Server(build):
+  Server_Build:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
