change CI to run on all branches

--- a/.github/workflows/c_build.yml
+++ b/.github/workflows/c_build.yml
@@ -2,9 +2,9 @@ name: C Build (CI)
 
 on:
   push:
-    branches: [ main ]
+    branches: [ '**' ]
   pull_request:
-    branches: [ main ]
+    branches: [ '**' ]
 
 jobs:
   Client_Build:
