add comment about wildcards

--- a/.github/workflows/c_build.yml
+++ b/.github/workflows/c_build.yml
@@ -3,6 +3,9 @@ name: C Build (CI)
 on:
   push:
     branches: [ '**' ]
+	# '**' stands for all possible characters, check
+	# wildcards and patterns cheat sheet:
+	# https://docs.github.com/en/actions/learn-github-actions/workflow-syntax-for-github-actions#filter-pattern-cheat-sheet
   pull_request:
     branches: [ '**' ]
 
