--- a/.github/workflows/c_build.yml
+++ b/.github/workflows/c_build.yml
@@ -41,5 +41,5 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: make ncurses UI
-      run: compile.sh
+      run: ./compile.sh
       working-directory: ncurses
