add command to run executable

--- a/ncurses/Makefile
+++ b/ncurses/Makefile
@@ -5,6 +5,11 @@ EXECUTABLE = papayaChat_client
 papayaChat : frontEnd.c
 	gcc $(CC_FLAGS) -o $(EXECUTABLE) frontEnd.c -lncurses
 
+.PHONY : run
+run: 
+	./$(EXECUTABLE)
+
+.PHONY : clean
 clean:
 	rm $(EXECUTABLE)
 
