fix bug, with executable variable missing

--- a/ncurses/Makefile
+++ b/ncurses/Makefile
@@ -2,7 +2,7 @@ CC_FLAGS = -Wall -Werror
 
 EXECUTABLE = papayaChat_client
 
-papayaChat : frontEnd.c
+$(EXECUTABLE) : frontEnd.c
 	gcc $(CC_FLAGS) -o $(EXECUTABLE) frontEnd.c -lncurses
 
 .PHONY : run
