--- a/.github/workflows/c_build.yml
+++ b/.github/workflows/c_build.yml
@@ -35,3 +35,10 @@ jobs:
     #  run: make check
     #- name: make distcheck
     #  run: make distcheck
+
+  ncurses_Frontend:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: make frontEnd
+      run: make frontEnd
