--- a/.github/workflows/c_build.yml
+++ b/.github/workflows/c_build.yml
@@ -26,7 +26,7 @@ jobs:
   ncurses_Frontend:
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest]
+        os: [ubuntu-latest, macos-11, macos-10.15]
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v2
