--- a/.github/workflows/networking.yml
+++ b/.github/workflows/networking.yml
@@ -16,8 +16,5 @@ jobs:
     - uses: actions/checkout@v2
     #- name: configure
     #  run: ./configure
-    - name: make server
-      run: make server
     - name: test server availability
-      run: ./serverAvailability.sh
-      working-directory: ./tests
+      run: make test
