--- a/.github/workflows/networking.yml
+++ b/.github/workflows/networking.yml
@@ -17,4 +17,4 @@ jobs:
     #- name: configure
     #  run: ./configure
     - name: test server availability
-      run: make test
+      run: make install
