--- a/.github/workflows/networking.yml
+++ b/.github/workflows/networking.yml
@@ -16,5 +16,5 @@ jobs:
     - uses: actions/checkout@v2
     #- name: configure
     #  run: ./configure
-    - name: test server availability
-      run: make install
+    - name: Test server's availability
+      run: make install-server
