keep improving makefile

--- a/documentation/Makefile
+++ b/documentation/Makefile
@@ -1,9 +1,11 @@
-MAIN_TEX_FILE= paper.tex
+MAIN_TEX_FILE = paper.tex
+OUTPUT_FILE = paper.pdf
 
 all: pdf
 
 pdf: 
-	xelatex --interaction=batchmode $(MAIN_TEX_FILE)
+	@xelatex --interaction=batchmode $(MAIN_TEX_FILE) > /dev/null 2>&1 || echo "pdf generation done!"
+	@open -g $(OUTPUT_FILE)
 
 clean:
 	@rm *.log *.aux ./chapters/*.log
